# ndk-app-template

./: .gitattributes  .gitignore  LICENSE  README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/androidTest/java/com/example/myapplication/: NativeTests.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app.cpp  app_test.cpp  libapp.map.txt
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
